# nyc-restaurant-week

./: CLAUDE.md  LICENSE  README.md  all-restaurants.txt  cli.py  find-intersection.py  michelin-restaurants.txt  pyproject.toml  scrape-michelin.py  scraper.py
