[project]
name = "nyc-restaurant-week-scraper"
version = "0.1.0"
description = "Find Michelin-starred restaurants participating in NYC Restaurant Week"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "selenium>=4.0.0",
    "webdriver-manager>=4.0.0",
    "requests>=2.28.0",
    "beautifulsoup4>=4.12.0",
    "python-dotenv>=1.0.0",
]
